[gd_scene load_steps=2 format=3 uid="uid://bg8wxhb7lwba0"]

[ext_resource type="Script" path="res://Scenes/MatchScene/MatchUI/LiberoOptionsNameCard.gd" id="1_tvb46"]

[node name="LiberoOptionsNameCard" type="ColorRect"]
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.188235, 0.298039, 1, 1)
script = ExtResource("1_tvb46")

[node name="PositionLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Position 1:"

[node name="PlayerLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 40.0
offset_right = 168.0
offset_bottom = 63.0
text = "Player: Giba (Outside)"

[node name="ServeStatusLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 64.0
offset_right = 168.0
offset_bottom = 87.0
text = "On court serve"

[node name="ReceiveStatusLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 80.0
offset_right = 168.0
offset_bottom = 103.0
text = "On court receive"
